# reachy-mini-teacher-app

./: .env.example  .gitignore  README.md  how_to_run.txt  index.html  pyproject.toml  style.css
.github/workflows/: publish.yml
docs/: TECHNICAL_GUIDE.md
reachy_mini_teacher_app/: README.md  __init__.py  camera_worker.py  config.py  console.py  gemini_handler.py  local_handler.py  main.py  moves.py  openai_handler.py  prompts.py  session_db.py  session_summarizer.py  utils.py
reachy_mini_teacher_app/audio/: head_wobbler.py  speech_tapper.py
reachy_mini_teacher_app/profiles/default/: tools.txt
reachy_mini_teacher_app/profiles/english_teacher/: instructions.txt  tools.txt  voice.txt
reachy_mini_teacher_app/prompts/: default_prompt.txt
reachy_mini_teacher_app/static/: index.html  main.js  style.css
reachy_mini_teacher_app/tools/: background_tool_manager.py  camera.py  check_weather.py  core_tools.py  dance.py  do_nothing.py  head_tracking.py  move_head.py  play_emotion.py  remember_user_name.py  stop_dance.py  stop_emotion.py  switch_persona.py  switch_user.py  task_cancel.py  task_status.py
reachy_mini_teacher_app/vision/: processors.py  yolo_head_tracker.py
scripts/: publish_to_hf.py
tests/: test_background_tool_manager.py  test_config.py  test_gemini_handler.py  test_openai_integration.py  test_prompts.py  test_session_db.py  test_session_summarizer.py  test_tools.py  test_utils.py
